feat: Add background color for card texts and titles

--- a/meet-your-star-wars-lover/src/Router.css
+++ b/meet-your-star-wars-lover/src/Router.css
@@ -46,3 +46,9 @@ nav .dropdown-menu {
 .container {
   color: whitesmoke;
 }
+.card-body {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
+  background-color: #171818;
+}
